# orioks_backend

./: .env  pyproject.toml
app/: models.py
app/api/routes/: field.py  professor.py  student.py
app/core/: config.py  db.py
app/repository/: __init__.py  repoInterface.py  sqlaRepository.py
