[project]
name = "orioks-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standart]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.0",
    "ruff>=0.9.7",
    "sqlalchemy>=2.0.38",
]

[tool.uv.workspace]
members = ["sqlacodegen"]

[dependency-groups]
dev = [
    "sqlacodegen==3.0.0rc5",
]
